# fred

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HANDOFF-1974.md  HANDOFF-1976.md  HANDOFF-1977.md  INGESTION_ROBUSTNESS_HANDOFF.md  LICENSE  Makefile  NOTES-AUTHZ05-REVIEW.md  NOTES-GRAPH-CAPABILITY-BRIDGE.md  NOTES-INGESTION-TASK-TRACKING-FIX.md  README.md  SWIFT_fmuller_comments.md  TEMP_MERMAID_MARKDOWN_ISSUE.md  authorization_todo.md  fillSession.py  mermaid_prompt_addon.txt  old_AGENT.md  pyrightconfig.json  ruff.toml  start.sh  unreachable_commits.txt
app-backend/: .coveragerc  Makefile  README.md  pyproject.toml  pyrightconfig.json
app-backend/.baseline/: bandit-baseline.json  detect-secret-baseline.json
app-backend/app_backend/: __init__.py  main.py
app-backend/app_backend/common/: __init__.py  config_loader.py  structures.py
app-backend/config/: .env.template  configuration.yaml  configuration_prod.yaml
app-backend/tests/: test_main.py
apps/fred-agents/: .coveragerc  Makefile  README.md  pyproject.toml  pyrightconfig.json
apps/fred-agents/.baseline/: bandit-baseline.json  detect-secret-baseline.json
apps/fred-agents/config/: .env.template  configuration.yaml  configuration_bench_postgres.yaml  configuration_prod.yaml  mcp_catalog.yaml  models_catalog.yaml  models_catalog_bench.yaml
apps/fred-agents/dockerfiles/: Dockerfile-prod
apps/fred-agents/fred_agents/: __init__.py  __main__.py  deep_assistant.py  general_assistant.py  main.py  rag_expert.py  react_rag_mcp.py  registry.py  report_generator.py  sentinel.py  simple_assistant.py  sql_expert.py  web_search.py
apps/fred-agents/tests/: conftest.py  test_capability_boot.py  test_capability_team_scope_policy.py  test_comparison_graph.py  test_entrypoint.py  test_mindmap_graph.py  test_prompting.py  test_scenarios.py  test_self_test_agent.py  test_smoke.py  test_test_assistant_document_scenario.py
apps/knowledge-flow-backend/: AGENTS.md  Makefile  README.md  implementation-plan.md  pyproject.toml  pyrightconfig.json  tox.ini
apps/knowledge-flow-backend/.baseline/: basedpyright-baseline.json
apps/knowledge-flow-backend/.github/: copilot-instructions.md
apps/knowledge-flow-backend/alembic/: env.py
apps/knowledge-flow-backend/config/: README.md  configuration.yaml  configuration_bench.yaml  configuration_gcp.yaml  configuration_local_mock.yaml  configuration_postgres.yaml  configuration_prod.yaml  configuration_test.yaml  configuration_worker.yaml
apps/knowledge-flow-backend/dockerfiles/: Dockerfile-dev  Dockerfile-prod
apps/knowledge-flow-backend/docs/: DEVELOPER_GUIDE.md  HYBRID_RETRIEVER.md  RETRIEVERS.md  STRICT_RETRIEVER.md  TESTING.md
apps/knowledge-flow-backend/knowledge_flow_backend/: application_context.py  application_state.py  main.py  main_worker.py
apps/knowledge-flow-backend/tests/: conftest.py  test_authz_endpoint_matrix.py
contrib/cir/: Makefile  README.md  pyproject.toml
contrib/cir/.baseline/: bandit-baseline.json  detect-secret-baseline.json
contrib/cir/cir/: __init__.py  cir_library_output_processor.py  config.py  main.py
contrib/cir/tests/: test_cir_processor.py
contrib/graphrag_mcp_server/: .env.template  Makefile  README.md  Rag_vs_Graphrag  main.py  pyproject.toml
contrib/graphrag_mcp_server/data/: test.md
contrib/graphrag_mcp_server/graph_search/: controller.py  graph_alimentation_pipeline.py  service.py  utils.py
developer_tools/: Makefile  README.md  ai_code_review.py  ai_deployment_review.py  ai_review.py  check_and_add_apachev2_headers.sh  evaluate-vector-search.sh  pyproject.toml  update-release-note.sh
developer_tools/ai_tools/: Makefile  README.md  ai_deployment_review.py
developer_tools/benchmarks/: .gitignore  Dockerfile  Makefile  README.md  go.mod  monitor_fds.sh  sse_bench.go  ws_bench.go
developer_tools/utility_commands/: check_and_add_apachev2_headers.sh
fred-core/: Makefile  README.md  docker-compose.integration.yml  pyproject.toml  pyrightconfig.json
fred-core/.baseline/: detect-secret-baseline.json
fred-core/fred_core/: __init__.py
fred-core/fred_core/common/: __init__.py  config_files.py  config_loader.py  fastapi_handlers.py  lru_cache.py  structures.py  utils.py
fred-core/fred_core/conversion/: __init__.py  pptx_pdf.py
fred-core/fred_core/filesystem/: local_filesystem.py  minio_filesystem.py  structures.py
fred-core/fred_core/kpi/: __init__.py  base_kpi_store.py  base_kpi_writer.py  kpi_phase_metric.py  kpi_process.py  kpi_reader_structures.py  kpi_writer.py  kpi_writer_structures.py  log_kpi_store.py  noop_kpi_writer.py  opensearch_kpi_store.py  prometheus_kpi_store.py
fred-core/fred_core/logs/: __init__.py  base_log_store.py  log_setup.py  log_structures.py  null_log_store.py  opensearch_log_store.py
fred-core/fred_core/model/: embedding_factory.py  factory.py  http_clients.py  model_factory.py  models.py
fred-core/fred_core/models/: base.py
fred-core/fred_core/processors/: __init__.py  base_library_output_processor.py  base_output_processor.py  contracts.py  document_structures.py  empty_output_processor.py
fred-core/fred_core/scheduler/: __init__.py  backend.py  base_scheduler.py  (+7 more)
libs/fred-capability-writable-document/: Makefile  README.md  pyproject.toml  pyrightconfig.json
libs/fred-core/: Makefile  README.md  docker-compose.integration.yml  pyproject.toml  pyrightconfig.json
libs/fred-runtime/: Makefile  README.md  pyproject.toml  pyrightconfig.json
libs/fred-sdk/: Makefile  README.md  pyproject.toml  pyrightconfig.json
validation/: .gitignore  Makefile  README.md  RFC-C3-validation-extensions.md  conftest.py  factory_config.py  generate_report.py  pyproject.toml
validation/scenarios/: test_content_scope_bypass.py  test_cumulative_team_roles.py  test_platform_admin_capabilities.py  test_platform_role_isolation.py  test_prompt_authz.py  test_runtime_team_isolation.py  test_team_registry_authz.py
validation/tests/: conftest.py  test_factory_config.py  test_swift_clean_no_groups.py
(+4681 files in other folders)
