[project]
name = "fred-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
      "fastapi==0.116.1",
      "pyjwt>=2.10.1,<3.0.0",
      "duckdb>=1.3.2",
      "opensearch-py==2.8.0",
      "pandas>=2.2.2,<3.0.0",
      "pydantic>=2.5.2,<3.0.0",
      "sqlalchemy>=2.0.42",
      "sqlparse>=0.5.3",
      "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_core*"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
dev = ["bandit>=1.8.6", "basedpyright>=1.31.0", "ruff>=0.12.5"]
