[project]
name = "knowledge-flow-backend"
readme = "README.md"
version = "1.5.2"
license = "Apache-2.0"
description = "Knowledge Flow Backend"
authors = [{ name = "Fred", email = "noreply@example.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi==0.139.0",
  "langchain>=1.3.14",
  "langchain-community>=0.4.1",
  "langchain-text-splitters>=1.1.2",
  "langchain-postgres>=0.0.17",
  "uvicorn[standard]==0.34.0",
  "openai>=1.104.2,<2.29.0",
  "coloredlogs==15.0.1",
  "PyYAML>=6.0.1",
  "pydantic>=2.5.2,<3.0.0",
  "pydantic-settings>=2.14.2,<3.0.0",
  "ipython==8.31.0",
  "python-multipart>=0.0.32,<0.0.33",
  "opensearch-py==2.8.0",
  "python-docx==1.1.2",
  "pypandoc-binary==1.15",
  "pypandoc==1.15",
  "pandas==2.2.3",
  "pypdf==6.13.3",
  "python-pptx==1.0.2",
  "google-cloud-storage==3.1.0",
  "rich==14.0.0",
  "shortuuid==1.0.13",
  "openpyxl==3.1.5",
  "docling==2.102.2",
  "openvino==2026.0.0; sys_platform == 'linux'",
  "hf-xet==1.1.1",
  "fastapi-mcp==0.4.0",
  "duckdb>=1.3.2",
  "fred-core>=1.5.0",
  "dateparser>=1.2.2",
  "pymysql>=1.1.1",
  "duckdb-engine>=0.17.0",
  "psycopg2-binary>=2.9.10",
  "sqlparse>=0.5.3",
  "uv",
  "chromadb>=0.5",
  "python-keycloak>=5.8.1",
  # ClickHouse client
  "clickhouse-connect>=0.8.0",
  # MarkItDown extras: ensure .docx support is available for the lite DOCX path
  # Note: keep python-docx pinned above; markitdown[docx] will ensure runtime deps
  "markitdown[all]>=0.1.3",
  "pymupdf>=1.27.2.3",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.2.1",
  # PyTorch for amd64: CPU-only wheels from pytorch-cpu index
  "torch==2.7.1+cpu; platform_machine == 'x86_64' and sys_platform == 'linux'",
  "torchvision==0.22.1+cpu; platform_machine == 'x86_64' and sys_platform == 'linux'",
  # PyTorch for macOS on Intel (no +cpu builds)
  "torch==2.7.1; platform_machine == 'x86_64' and sys_platform == 'darwin'",
  "torchvision==0.22.1; platform_machine == 'x86_64' and sys_platform == 'darwin'",
  # PyTorch for ARM64 (M1/M2 Macs, Graviton, Raspberry Pi)
  "torch==2.7.1; platform_machine == 'aarch64' or platform_machine == 'arm64'",
  "torchvision==0.22.1; platform_machine == 'aarch64' or platform_machine == 'arm64'",
  "sentence-transformers==5.1.1",
  "sqlmodel>=0.0.32",
  "python-magic>=0.4.27",
  "alembic>=1.18.4",
  "pymupdf4llm>=1.27.2.3",
  # Audio/video ingestion
  "av>=14.0.0",
  "faster-whisper>=1.1.0",
  "paddleocr>=3.6.0",
  "paddlepaddle>=3.3.1"
]

[project.optional-dependencies]
dev = [
  "pytest-cov==6.1.1",
  "reportlab==4.3.1",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "pytest-socket>=0.7.0",
  "black==26.3.1",
  "isort==5.10.1",
  "tox==4.27.0",
  "pre-commit==4.2.0",
  "bandit==1.8.5",
  "ruff==0.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
packages = [{ include = "knowledge_flow_backend" }]

[tool.ruff]
# Inherit the shared monorepo lint policy (see /ruff.toml); keep the wider line-length here.
extend = "../../ruff.toml"
line-length = 200

[tool.setuptools.packages.find]
include = ["knowledge_flow_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
cache_dir = "/tmp/.pytest"

markers = [
  "integration: mark integration tests",
  "content_storage_type(type): mark test to select a content store backend",
  "metadata_storage_type(type): mark test to select a metadata store backend",
  "vector_storage_type(type): mark test to select a vector store backend",
]

[tool.uv.sources]
fred-core = { path = "../../libs/fred-core", editable = true }

# Keep CPU-only index for x86_64
torch = { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
torchvision = { index = "pytorch-cpu", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
  "bandit>=1.8.5",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.1.1",
  "pytest-socket>=0.8.0",
  "ruff>=0.12.0",
]

[tool.uv]
# Using `editable_mode = "compat"` when installing fred-core to make editable install work with Pylance (vscode):
# https://github.com/microsoft/pylance-release/blob/main/TROUBLESHOOTING.md#editable-install-modules-not-found
config-settings = { editable_mode = "compat" }
# The lockfile is used for both Linux (deploy/CI) and macOS (local dev).
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
