[project]
name = "cir-hipporag-service"
version = "0.1.0"
description = "Standalone CIR HippoRAG library processor service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.34.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.28.1",
  "fred-core",
  "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
# Upstream hipporag==2.0.0a4 has an invalid openai pin (1.91.1 not on PyPI).
# Use a fork with a fixed OpenAI pin
hipporag = [
  "hipporag @ git+https://github.com/dimitri-tombroff/HippoRAG.git@openai-dependency-fix"
]
dev = [
  "ruff",
  "bandit[baseline]",
  "detect-secrets",
  "basedpyright",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cir*"]

[tool.uv.sources]
fred-core = { path = "../../fred-core", editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv]
override-dependencies = ["torch==2.5.1+cpu"]
index-strategy = "unsafe-best-match"
