[project]
name = "graphrag-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "fastapi-mcp>=0.4.0",
    "graphiti>=0.1.13",
    "graphiti-core>=0.24.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "uv>=0.9.18",
    "uvicorn>=0.38.0",
]
