[project]
name = "fred-core"
version = "2.0.6"
description = "Core shared utilities for Fred backends (config, storage, security, and runtime helpers)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Thales", email = "noreply@thalesgroup.com" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://fredk8.dev", Repository = "https://github.com/ThalesGroup/fred" }
dependencies = [
    "fastapi==0.116.1",
    "prometheus-client>=0.20.5",
    "pyjwt>=2.10.1,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "opensearch-py==2.8.0",
    "pandas>=2.2.2,<3.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sqlalchemy>=2.0.42",
    "sqlparse>=0.5.3",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-mistralai>=1.1.2",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai>=1.1.14",
    "azure-identity>=1.25.0",
    "authzed>=1.22.1",
    "openfga-sdk>=0.9.9",
    "python-keycloak>=5.8.1",
    "minio>=7.2.20",
    "temporalio>=1.14.1",
    "uv>=0.11.6",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "greenlet>=3.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_core*"]

[tool.setuptools.package-data]
"fred_core" = ["py.typed"]
"fred_core.security.rebac" = ["schema.fga", "schema.fga.json"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-socket>=0.7.0",
]

[project.optional-dependencies]
migration = [
    "alembic>=1.18.4",
]
dev = [
    "alembic>=1.18.4",
    "bandit>=1.8.6",
    "basedpyright==1.31.0",
    "detect-secrets>=1.5.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-socket>=0.7.0",
    "ruff>=0.12.5",
]

[tool.coverage.run]
source = ["fred_core"]
omit = [
  # Database / SQL: requires live Postgres or Alembic migrations
  "fred_core/history/*",
  "fred_core/sql/alembic_env.py",
  "fred_core/sql/base_sql.py",
  # Object-storage and search backends: requires MinIO, OpenSearch, or OpenFGA
  "fred_core/filesystem/minio_filesystem.py",
  "fred_core/store/minio_content_store.py",
  "fred_core/store/opensearch_mapping_validator.py",
  "fred_core/logs/opensearch_log_store.py",
  "fred_core/kpi/opensearch_kpi_store.py",
  "fred_core/security/rebac/openfga_engine.py",
  # AI model factories: requires live provider credentials (OpenAI, Azure, Ollama, Vertex)
  "fred_core/model/factory.py",
  # OIDC / Keycloak HTTP clients: requires a live auth service
  "fred_core/security/oidc.py",
  "fred_core/security/outbound.py",
  "fred_core/security/backend_to_backend_auth.py",
  # KPI infrastructure: process daemon and multi-backend writer require live sinks
  "fred_core/kpi/kpi_process.py",
  "fred_core/kpi/kpi_writer.py",
  # Interactive CLI: browser / terminal auth flow, not unit-testable
  "fred_core/cli/auth.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
markers = ["integration: marks tests that require external services"]
testpaths = ["fred_core/tests"]
