[project]
name = "fred-runtime"
version = "2.0.1"
description = "Runtime adapters and infrastructure wiring for Fred v2 agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Thales", email = "noreply@thalesgroup.com" }]
dependencies = [
  "fred-core>=1.5.3",
  "fred-sdk>=0.1.11",
  "deepagents>=0.4.11",
  "httpx>=0.28.1",
  "langchain-mcp-adapters>=0.2.1",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=1.1.3",
  "langfuse>=3.0.0",
  "requests>=2.32,<3",
  "PyYAML>=6.0",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
urls = { Homepage = "https://fredk8.dev", Repository = "https://github.com/ThalesGroup/fred" }

[project.scripts]
fred-agents-cli = "fred_runtime.client:main"

[project.optional-dependencies]
# Install fred-runtime[app] when building an agent pod with a FastAPI HTTP server.
app = [
  "fastapi>=0.116",
]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_runtime*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
markers = ["integration: marks tests that require external services"]
testpaths = ["tests"]

[tool.uv.sources]
# Local path overrides for mono-repo development only.
# These are ignored when the package is built and published — the published
fred-core = { path = "../fred-core", editable = true }
fred-sdk = { path = "../fred-sdk", editable = true }

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.5",
]
