[project]
name = "fred-runtime"
version = "3.2.0"
description = "Runtime adapters and infrastructure wiring for Fred v2 agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Thales", email = "noreply@thalesgroup.com" }]
dependencies = [
  "fred-core>=3.3.0",
  "fred-sdk>=3.2.0",
  "alembic>=1.18.4",
  "deepagents>=0.4.11",
  "httpx>=0.28.1",
  "langchain-mcp-adapters>=0.2.1",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=1.1.3",
  "langfuse>=3.0.0",
  "requests>=2.32,<3",
  "PyYAML>=6.0",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
urls = { Homepage = "https://fredk8.dev", Repository = "https://github.com/ThalesGroup/fred" }

[project.scripts]
fred-agents-cli = "fred_runtime.client:main"

[project.optional-dependencies]
# Install fred-runtime[app] when building an agent pod with a FastAPI HTTP server.
app = [
  "fastapi>=0.116",
]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_runtime*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
markers = ["integration: marks tests that require external services"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["fred_runtime"]
omit = [
  "fred_runtime/cli/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.uv.sources]
# Local path overrides for mono-repo development only.
# These are ignored when the package is built and published — the published
fred-core = { path = "../fred-core", editable = true }
fred-sdk = { path = "../fred-sdk", editable = true }

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]

[tool.alembic]
script_location = "%(here)s/alembic"
