[project]
name = "fred-sdk"
version = "3.3.4"
description = "Authoring SDK for Fred agents — graph, ReAct, and team agent primitives."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Thales", email = "noreply@thalesgroup.com" }]
dependencies = [
  "fred-core>=3.4.1",
  "pydantic>=2.7.0,<3.0.0",
  "langchain-core>=0.3.0",
  "langchain>=1.3.14",
  "langgraph>=1.2.9",
  "httpx>=0.28.1",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
urls = { Homepage = "https://fredk8.dev", Repository = "https://github.com/ThalesGroup/fred" }

[project.optional-dependencies]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_sdk*"]

[tool.setuptools.package-data]
"fred_sdk" = ["resources/prompts/*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
markers = ["integration: marks tests that require external services"]
testpaths = ["tests"]

[tool.uv.sources]
# Local path overrides for mono-repo development only.
# These are ignored when the package is built and published — the published
# wheel resolves fred-core from PyPI via [project.dependencies].
fred-core = { path = "../fred-core", editable = true }

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "pytest>=8.4.2",
  "pytest-cov>=6.2.1",
  "pytest-socket>=0.7.0",
  "ruff>=0.12.5",
]
